# django-quanttide-projects

./: README.md  pyproject.toml
django_quanttide_projects/: apps.py
django_quanttide_projects/models/: __init__.py  choices.py  fields.py  matters.py  mixins.py  models.py  projects.py
django_quanttide_projects/serializers/: matters.py  projects.py
django_quanttide_projects/test/: __init__.py  models.py
examples/qtcloud_projects/: manage.py
examples/qtcloud_projects/matters/: models.py
examples/qtcloud_projects/qtcloud_projects/: asgi.py  settings.py  urls.py  wsgi.py
examples/qtresearch_ra/: manage.py
examples/qtresearch_ra/projects/fixtures/: projects.json
examples/qtresearch_ra/projects/migrations/: 0001_initial.py
examples/qtresearch_ra/qtresearch_ra/: asgi.py  settings.py  wsgi.py
examples/ra/projects/: models.py
examples/ra/projects/fixtures/: projects.json  task.json
examples/ra/ra/: settings.py
tests/: models.py  settings.py  test_models.py  test_models_fields.py  test_models_matters.py  test_models_projects.py
